--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="mountain_imagesize">86sp</dimen>
     <dimen name="map_height">200dp</dimen>
     <dimen name="scalebar_width">50dp</dimen>
@@ -15,5 +15,9 @@
     <dimen name="textsize_large">22sp</dimen>
 
     <fraction name="aspectRatioProjectAdapter">300.000%</fraction>
+
+    <dimen name="design_fab_size_normal" tools:override="true">80dp</dimen>
+    <dimen name="design_fab_image_size" tools:override="true">80dp</dimen>
+
 
 </resources>
