--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -76,5 +76,9 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="FabInfoText" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/textsize_small</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
 
 </resources>
