--- a/android/app/src/main/res/layout/fragment_place.xml
+++ b/android/app/src/main/res/layout/fragment_place.xml
@@ -149,4 +149,11 @@
         android:layout_centerInParent="true"
         android:textColor="@color/text_additional" />
 
+    <no.dnt.sjekkut.ui.CheckinButton
+        android:id="@+id/checkinButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:animateLayoutChanges="true" />
+
 </RelativeLayout>
