--- a/android/app/src/main/res/layout/fragment_projectlist.xml
+++ b/android/app/src/main/res/layout/fragment_projectlist.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/toolbar"
@@ -15,7 +14,16 @@
         android:name="no.dnt.sjekkut.ui.TripListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
         app:layoutManager="LinearLayoutManager"
         tools:context="no.dnt.sjekkut.ui.ProjectListFragment"
         tools:listitem="@layout/item_project" />
-</LinearLayout>
+
+    <no.dnt.sjekkut.ui.CheckinButton
+        android:id="@+id/checkinButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:animateLayoutChanges="true" />
+
+</RelativeLayout>
