Show nearest place in CheckinButton
- show distance in button
- show place name in info view
- do networks calls in CheckinButton
- add setLocation(..) to CheckinButton
- enable useCompatPadding on FAB to make margins
  the same between older and never Android versions
- add TextView on top of FAB button
- elevate mInfo and mText views to the same as FAB button
  with android:elevation or ViewCompat.setElevation(..) for pre-21

--- a/android/app/src/main/res/layout/layout_checkinbutton.xml
+++ b/android/app/src/main/res/layout/layout_checkinbutton.xml
@@ -28,9 +28,10 @@
         android:layout_alignRight="@id/fabButton"
         android:layout_alignStart="@id/fabButton"
         android:layout_centerVertical="true"
+        android:elevation="6dp"
         android:gravity="center"
         android:maxLines="2"
-        tools:ignore="PrivateResource"
+        tools:ignore="PrivateResource,UnusedAttribute"
         tools:text="23 km" />
 
     <TextView
@@ -44,10 +45,11 @@
         android:layout_toLeftOf="@id/fabButton"
         android:layout_toStartOf="@id/fabButton"
         android:background="@color/dntLightGray"
+        android:elevation="6dp"
         android:gravity="center"
         android:padding="@dimen/margin_small"
         android:visibility="invisible"
-        tools:ignore="PrivateResource"
+        tools:ignore="PrivateResource,UnusedAttribute"
         tools:visibility="visible" />
 
 </merge>
